<resources>
    <string name="app_name">V-Mall</string>
    <string name="products">Products</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>

    <string name="go_back">Go back</string>
    <string name="type_message">Type a message…</string>
    <string name="user_image">User image</string>
    <string name="user_name_format">%1$s %2$s</string>
    <string name="chat_image">Chat image</string>
    <string name="pictures">Pictures</string>
    <string name="take_photo">Take photo</string>
    <string name="more_options">More options</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account? create a new account</string>
    <string name="have_account">Already have an account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="create_new_account">Create a new account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="already_account">Already have a account ? Login</string>
    <string name="password_validation">password must be at least 6 characters</string>
    <string name="you_sent_photo">You sent a photo</string>
    <string name="friend_sent_photo">%1$s sent a photo</string>
    <string name="you_sent_text">You: %1$s</string>
    <string name="price">$%s</string>
    <string name="likes">%s like this</string>
    <string name="views">%s views</string>
    <string name="_views">• %s views</string>
    <string name="search_your_product">Search your product</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="recent_views">Recently Viewed</string>
    <string name="product_image">Product Image</string>
    <string name="most_popular">Most popular</string>
    <string name="view_all">View all</string>
    <string name="product_details">Product Details</string>
    <string name="product_specifications">Product specifications</string>
    <string name="category">Category</string>
    <string name="product_description">Product description</string>
    <string name="message">Message</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="unlike">Unlike</string>
    <string name="views_format">(%s)</string>
    <string name="add_image">Add Image</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="apply_specifications">Apply Specifications</string>
    <string name="apply_details">Apply Details</string>
    <string name="product_name">Product Name</string>

    <string name="product_created_successfully">Product created successfully!</string>
    <string name="product_updated_successfully">Product updated successfully!</string>

    <string name="select_category">Please select a category and at least one photo</string>
    <string name="error">Error</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="search_filter">Search filter</string>
    <string name="sort_by">Sort by</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear all</string>
    <string name="search_settings">Search Settings</string>
    <string name="select_picture">Select Picture</string>
    <string name="logout">Logout</string>
    <string name="last_name">Last Name</string>
    <string name="my_products">My Products</string>

    <string name="rate">Rate</string>
    <string name="upload_time">Upload time</string>
    <string name="price_">Price</string>
    <string name="popularity">Popularity</string>
    <string name="hash_tags">Hash Tags</string>
    <string name="separate_hash_tags">Separate with comma</string>

    <string name="likes_">%s\nLikes</string>
    <string name="products_">%s\nProducts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
