<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:background="@android:color/white"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:tint="@color/red"
        android:src="@drawable/ic_help_black_24dp"
        android:contentDescription="@string/error"/>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkGray"
        android:textSize="19sp"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:fontFamily="@font/breeze_sans_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            style="@style/CommonButtonStyle"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/delete_btn"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white"
            style="@style/CommonButtonStyle"
            android:text="@string/delete"/>

    </LinearLayout>

</LinearLayout>