<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#2fb7ec"
        android:padding="15dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@android:color/white"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/go_back"/>

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/search_bar_shape">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/search_icon"
                android:tint="@android:color/white"
                android:contentDescription="@string/search"/>

            <EditText
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/breeze_sans_light"
                android:textColorHint="#98d5ed"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:hint="@string/search_your_product" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/searches_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/breeze_sans_bold"
            android:textSize="16sp"
            android:text="@string/recent_searches"
            android:textColor="@android:color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searches_recycler_view"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/searches_label"
            app:layout_constraintBottom_toTopOf="@id/views_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/views_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/views_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/breeze_sans_bold"
            android:textSize="16sp"
            android:text="@string/recent_views"
            android:textColor="@android:color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/views_recycler_view"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>