<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="15dp"
    tools:context=".ui.main.searchSettings.SearchSettingsFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:fontFamily="@font/breeze_sans_regular"
                android:text="@string/search_filter"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/sort_by_headline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.30"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:fontFamily="@font/breeze_sans_regular"
                    android:text="@string/sort_by"/>

                <Spinner
                    android:id="@+id/sort_by_spinner"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sort_by_headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="45dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/category_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.30"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:fontFamily="@font/breeze_sans_regular"
                    android:text="@string/category"/>

                <Spinner
                    android:id="@+id/category_spinner"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/category_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="45dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer_container"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_marginEnd="10dp"
            android:textColor="#F7797A"
            style="@style/SettingsButtonStyle"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/apply_btn"
            android:textColor="#2fb7ec"
            style="@style/SettingsButtonStyle"
            android:text="@string/apply"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>