<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.settings.SettingsFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/search_label"
        app:layout_constraintBottom_toBottomOf="@id/search_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:elevation="1dp"
        android:tint="@color/gray"
        android:visibility="gone"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/go_back"/>

    <TextView
        android:id="@+id/search_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_settings"
        android:gravity="center"
        android:fontFamily="@font/breeze_sans_light"
        android:textSize="16sp"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:background="@drawable/bottom_black_line_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <fragment
        android:id="@+id/settings_nav_host"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_label"
        app:layout_constraintBottom_toTopOf="@id/footer_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/settings_nav_graph"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/clear_all"
            android:fontFamily="@font/breeze_sans_bold"
            android:textAllCaps="false"
            android:textSize="16.5sp"
            android:background="@color/lightGray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.60"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:text="@string/submit"
            android:fontFamily="@font/breeze_sans_bold"
            android:textAllCaps="false"
            android:background="#2fb7ec"
            android:textSize="16.5sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/clear_btn"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>