<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".sign.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_account"
            android:fontFamily="@font/champagne_limousines_bold"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:fontFamily="@font/champagne_limousines_bold"
            android:textColor="@color/gray"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/ic_person_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/champagne_limousines_bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="42dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAllCaps="true"
                android:text="@string/name"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@android:color/white"
                android:fontFamily="@font/champagne_limousines_bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/ic_mail_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/champagne_limousines_bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="42dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAllCaps="true"
                android:text="@string/email"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@android:color/white"
                android:fontFamily="@font/champagne_limousines_bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/champagne_limousines_bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="42dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAllCaps="true"
                android:text="@string/password"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@android:color/white"
                android:fontFamily="@font/champagne_limousines_bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/confirm_password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/champagne_limousines_bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="42dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAllCaps="true"
                android:text="@string/confirm_password"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@android:color/white"
                android:fontFamily="@font/champagne_limousines_bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/sign_btn_shape"
            android:fontFamily="@font/champagne_limousines_bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/create_account"/>

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/already_account"
            android:fontFamily="@font/champagne_limousines_bold"
            android:textColor="@color/gray"/>

    </LinearLayout>

</ScrollView>